--- a/reporter/webapp/static/css/main.css
+++ b/reporter/webapp/static/css/main.css
@@ -11,12 +11,12 @@ i.material-icons {
 }
 
 .navbar-dark {
-  background-color: #671c7d;
+  background-color: #15188a;
 }
 
 a.navbar-brand {
   color: #fff;
-  font-family: 'Lato', 'Roboto', sans-serif;
+  font-family: 'Futura', 'Lato', 'Roboto', sans-serif;
 }
 
 td {
