--- a/reporter/webapp/templates/layout.pug
+++ b/reporter/webapp/templates/layout.pug
@@ -4,10 +4,11 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width,initial-scale=1.0')
     // [KDE Oxygen Icon](http://www.kde.org/)
-    link(rel='shortcut icon', href='/static/favicon/kde-oxygen-action-office-chart-line.png')
+    link(rel='shortcut icon',
+         href='/static/favicon/kde-oxygen-action-office-chart-line.png')
     block stylesheets
       include stylesheets.pug
-    title Financial Article Generator
+    title Market Reporter
   body
     include navbar.pug
     main
