--- a/reporter/webapp/templates/navbar.pug
+++ b/reporter/webapp/templates/navbar.pug
@@ -1,6 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-dark
   .container
-    a.navbar-brand(href='/human-evaluation/list') Financial Article Generator
+    a.navbar-brand(href='/human-evaluation/list')
+      img(src='/static/png/logo-webapp.png', height='36px')
     button.navbar-toggler.collapsed(type='button', data-toggle='collapse', data-target='#navbarColor01', aria-controls='navbarColor01', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarColor01.navbar-collapse.collapse
