Add CDN fallback

--- a/reporter/webapp/templates/stylesheets.pug
+++ b/reporter/webapp/templates/stylesheets.pug
@@ -1,5 +1,4 @@
 link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400|Lato')
-link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Fira+Mono')
-link(href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.3/cosmo/bootstrap.min.css', rel='stylesheet', integrity='sha384-a1fJ5ppVJ3J5OscI8CmYpZH6XRnafYX7sXnA9uVadDWXox/IU9IIk9zz5zNE5HPL', crossorigin='anonymous')
+link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400')
+link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.3/cosmo/bootstrap.min.css', integrity='sha384-a1fJ5ppVJ3J5OscI8CmYpZH6XRnafYX7sXnA9uVadDWXox/IU9IIk9zz5zNE5HPL', crossorigin='anonymous')
 link(rel='stylesheet', href='/static/css/main.css')
