--- a/reporter/webapp/templates/layout.pug
+++ b/reporter/webapp/templates/layout.pug
@@ -3,9 +3,7 @@ html(lang='en')
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width,initial-scale=1.0')
-    // [KDE Oxygen Icon](http://www.kde.org/)
-    link(rel='shortcut icon',
-         href='/static/favicon/kde-oxygen-action-office-chart-line.png')
+    link(rel='shortcut icon', href='/static/favicon/favicon.ico')
     block stylesheets
       include stylesheets.pug
     title Market Reporter
